--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >
           <ul class="menu list">
             <li class="menu-item">
-              <a class="menu-link link" href="./index.html">Студія</a>
+              <a class="menu-link link current" href="./index.html">Студія</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
@@ -38,7 +38,7 @@
           </ul>
         </nav>
         <ul class="menu-contact list">
-          <li>
+          <li class="list-link">
             <a
               class="contact-mail link"
               href="mailto:info@devstudio.com"
